--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
 	<title>Personal Blog</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="../css/index.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
 </head>
 <body>
 	<header>
